--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,12 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "./src/",
   },
   "include": [
-    "src"
+    "src" 
   ]
 }
